*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
@@ -27,6 +27,7 @@ look closer at how the product is customized.</p>
 		about.properties
 		acme.gif
 		plugin_customization.ini
+		plugin_customization.properties
 		splash.bmp
 		welcome.xml</b></font></pre>
 <h3>About dialogs</h3>
@@ -46,7 +47,7 @@ overall product.&nbsp; Additional files are used to specify this information.</p
     page.&nbsp; See <a href="../reference/misc/about_customization.html">Customization
     using about.ini </a>for a complete description of the format of this file.&nbsp;</li>
   <li><b>about.properties</b> should be used to hold translated strings from the
-    <b>about.ini </b>file (using %var% as the value in about.ini paired with an
+    <b>about.ini </b>file (using &quot;%var&quot; as the value in about.ini paired with an
     entry for the key &quot;var&quot; in about.properties.&nbsp; This file is a <b>java.io.Properties</b>
     format file.</li>
   <li><b>about.mappings</b> can be used to fill in values for fill-in fields in
@@ -73,10 +74,14 @@ attribute in the about.ini file. The path should be specified as a plug-in
 relative path.&nbsp; A proper entry for the directory structure shown above
 would be as follows:</p>
 <pre><font color="#4444CC">welcomePage=welcome.xml</font></pre>
+<p>You can also specify an national language lookup for the file.&nbsp; (See <a href="product_def_nl.htm">Locale
+specific files</a> for more detail.)</p>
+<pre><font color="#4444CC">welcomePage=$nl$/welcome.xml</font></pre>
+<p>&nbsp;</p>
 <h3>Splash screens</h3>
 <p>The product splash screen is supplied in a <b>splash.bmp</b> file located in
 the primary feature plug-in directory.&nbsp; The image should be supplied in
-24-bit color BMP format and should be approximately 500x330 pixels in
+24-bit color BMP format (RGB format) and should be approximately 500x330 pixels in
 size.&nbsp; If splash screens need to be customized for different locales, they
 can be placed in a fragment of the primary feature's plug-in.</p>
 <h3>Preferences defaults</h3>
@@ -86,7 +91,7 @@ other plug-ins.&nbsp; This file is a <b>java.io.Properties</b> format file.
 Typically this file is used to set the values for preferences that are published
 as part of a plug-in's public API.&nbsp; That is, you are taking a risk if you
 refer to preferences that are used by plug-ins but not defined formally in the
-API.</p>
+API.&nbsp;&nbsp;</p>
 <p>One common customization is to set the default perspective for the
 workbench.&nbsp; This preference is defined in the <b>org.eclipse.ui </b>plug-in.&nbsp;&nbsp;
 The
@@ -95,7 +100,10 @@ perspective as the default perspective.</p>
 <pre><font color="#4444CC">org.eclipse.ui/defaultPerspectiveId=org.eclipse.ui.resourcePerspective</font></pre>
 <p>If you discover you need to change the default value for one of another plug-in's
 preferences, consult the API documentation for that plug-in to see if the
-preference is considered public.<font color="#4444CC"><br>
+preference is considered public.</p>
+<p>The <b>plugin_customization.properties</b> file contains translated strings
+for the <b>plugin_customization.ini</b>
+ file.<font color="#4444CC"><br>
 </font></p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
