--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_feature.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_feature.htm
@@ -15,7 +15,7 @@ product.&nbsp; Grouping plug-ins into features allows the product to be
 installed and updated in a way that coexists with other Eclipse based
 products.&nbsp; The platform itself is partitioned into three major features:</p>
 <ul>
-  <li>platform</li>
+  <li>Platform</li>
   <li>JDT (Java Development Tooling)</li>
   <li>PDE (Plug-in Developer Environment)</li>
 </ul>
@@ -39,44 +39,43 @@ the platform feature:</p>
 	id=&quot;org.eclipse.platform&quot; 
 	label=&quot;%featureName&quot; 
 	version=&quot;2.0.0&quot; 
+	image=&quot;eclipse_update_120.jpg&quot; 
 	provider-name=&quot;%providerName&quot; 
 	primary=&quot;true&quot; 
 	application=&quot;org.eclipse.ui.workbench&quot;&gt;
-  	&lt;description&gt;%description&lt;/description&gt; 
-  	&lt;url&gt;
-  		&lt;update url=&quot;http://update.eclipse.org/updates&quot; label=&quot;eclipse.org update site&quot; /&gt; 
-  	&lt;/url&gt;
-  	&lt;plugin id=&quot;org.apache.ant&quot; version=&quot;1.4.1&quot; /&gt; 
-  	&lt;plugin id=&quot;org.apache.lucene&quot; version=&quot;1.2.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.apache.xerces&quot; version=&quot;4.0.3&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.ant.core&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.compare&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.core.boot&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.core.resources&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.core.runtime&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.debug.core&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.debug.ui&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.help&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.help.webapp&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.help.ui&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.platform&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.platform.doc.user&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.search&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.swt&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.team.core&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.team.cvs.core&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.team.cvs.ssh&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.team.cvs.ui&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.team.ftp&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.team.ui&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.team.webdav&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.tomcat&quot; version=&quot;4.0.3&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.ui&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.ui.externaltools&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.update.core&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.update.ui&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.update.ui.forms&quot; version=&quot;2.0.0&quot; /&gt; 
-  	&lt;plugin id=&quot;org.eclipse.webdav&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;description&gt;%description&lt;/description&gt; 
+	  &lt;license url=&quot;%licenseURL&quot;&gt;%license&lt;/license&gt; 
+	  &lt;url&gt;
+	  	&lt;update url=&quot;http://update.eclipse.org/updates&quot; label=&quot;%updateSiteName&quot; /&gt; 
+	  &lt;/url&gt;
+	  &lt;plugin id=&quot;org.apache.ant&quot; version=&quot;1.4.1&quot; /&gt; 
+	  &lt;plugin id=&quot;org.apache.lucene&quot; version=&quot;1.2.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.apache.xerces&quot; version=&quot;4.0.3&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.ant.core&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.compare&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.core.boot&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.core.resources&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.core.runtime&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.debug.core&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.debug.ui&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.help&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.help.webapp&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.help.ui&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.platform&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.platform.doc.user&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.search&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.swt&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.team.core&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.team.cvs.core&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.team.cvs.ssh&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.team.cvs.ui&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.team.ui&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.tomcat&quot; version=&quot;4.0.3&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.ui&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.ui.externaltools&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.update.core&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.update.ui&quot; version=&quot;2.0.0&quot; /&gt; 
+	  &lt;plugin id=&quot;org.eclipse.update.ui.forms&quot; version=&quot;2.0.0&quot; /&gt; 
   &lt;/feature&gt;</font></pre>
 <p>&nbsp;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
