--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_nl.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_nl.htm
@@ -25,7 +25,7 @@ plug-in.&nbsp;&nbsp;</p>
 <p>It is important to understand which mechanism is used to access any given
 file that must be translated so that you'll know what to name the file and where
 to put it in the file system relative to the plug-in.</p>
-<h4>Platform core mechanism</h4>
+<h4><a name="platform">Platform core mechanism</a></h4>
 <p>The platform core defines a directory structure that uses locale-specific
 subdirectories for files that differ by locale.&nbsp; Translated files are
 placed in a directory called <b>nl</b> under the plug-in.&nbsp; For example, the
