--- a/bundles/org.eclipse.platform.doc.isv/guide/product_extension.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_extension.htm
@@ -13,9 +13,9 @@
 <p>An <b>extension</b> is a set of Eclipse features and plug-ins that are
 designed to extend the functionality of already-installed Eclipse based
 products.&nbsp; Extensions are installed separately, but used only in
-conjunction with other products.&nbsp; This means that an extension does not
+conjunction with other Eclipse based products.&nbsp; This means that an extension does not
 need to install a JRE, the Eclipse platform, or a primary feature.&nbsp; The
-suggested directory structure for extensions allows a single installation to be
+recommended directory structure for extensions allows a single installation to be
 used with multiple Eclipse based products.</p>
 <p>The following directory structure shows how an extension for a hypothetical
 product, <b>betterwebs</b>, could be used to extend the function of the <b>acmeweb</b>
@@ -23,8 +23,7 @@ product.</p>
 <pre><font color="#4444CC">betterwebs/
 </font>	<font color="#4444CC">eclipse/</font>			(directory for installed Eclipse files)
 		<font color="#4444CC">.eclipseextension</font>	(marker file)
-		<font color="#4444CC">eclipse.exe	
-		features/</font>		(installed features)
+<font color="#4444CC">		features/</font>		(installed features)
 			<font color="#4444CC">com.example.betterwebs.betterfeature_1.0.0/
 				feature.xml
 		plugins/
