--- a/bundles/org.eclipse.platform.doc.isv/guide/product_update.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_update.htm
@@ -11,7 +11,7 @@
 <BODY BGCOLOR="#ffffff">
 <h2>Updating a product or extension</h2>
 <p>By following the prescribed procedures for packaging and installing products,
-we can take advantage of the <b>platform update server,</b> which treats
+we can take advantage of the <b>platform update manager,</b> which treats
 products and extensions in a uniform way and allows users to discover and
 install updated versions of products and extensions.</p>
 <p>Before looking at the implementation of such a server, it's important to
@@ -28,7 +28,7 @@ revisit some important concepts:</p>
     platform's concrete implementation of features and sites and conform to the
     appropriate install guidelines.</li>
   <li>Developers are free to use native installers and uninstallers to upgrade
-    their own products and extensions without regard to features, sites, and the
+    their own products and extensions without regard to sites and the
     update manager.</li>
 </ul>
 <p>That said, what do we do if we want to fully participate in the platform
