*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
@@ -18,7 +18,7 @@ debug implementations all share the workbench debug perspective and its
 associated views.&nbsp; In order to prevent the debug view's tool bars and popup
 menus from being unduly cluttered, debug plug-ins can specify named groups of
 debug actions that the user can choose to hide or show in the debugger.</p>
-<p>Action groups are defined in the <a href="../reference/extension-points/org_eclipse_debug_ui_debugActionGroups.html">org.eclipse.debug.ui.debugActionGroups</a>
+<p>Action groups are defined in the <a href="../reference/extension-points/org_eclipse_debug_ui_debugActionGroups.html"><b>org.eclipse.debug.ui.debugActionGroups</b></a>
 extension point.&nbsp; An action group has an <b>id</b>, <b>name</b>, and <b>visible</b>
 attribute.&nbsp; The visible attribute determines whether the actions in the
 group should be shown in debugger views by default.&nbsp; The user can change
