--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
@@ -13,16 +13,17 @@
 <p>The platform debug plug-ins allow you to extend the platform so that your
 program can be launched properly, obtaining input from the user if
 necessary.&nbsp; </p>
-<p>The class <a href="../reference/api/org/eclipse/debug/core/ILaunchConfiguration.html">ILaunchConfiguration</a>
+<p>The class <a href="../reference/api/org/eclipse/debug/core/ILaunchConfiguration.html"><b>ILaunchConfiguration</b></a>
 is used to describe how a program should be launched.&nbsp; A launch
 configuration keeps a set of named attributes that can be used to store data
 specific for a particular kind of launcher.&nbsp; Users interact with a launch
 configuration dialog to set up the parameters for different types of
 launches.&nbsp; These configurations can be
 stored in a file to be shared with other users or stored locally in the workspace.&nbsp;&nbsp; </p>
-<p>Plug-ins can contribute additional types of launchers and provide an <a href="../reference/api/org/eclipse/debug/core/ILaunchConfigurationDelegate.html">ILaunchConfigurationDelegate</a>
+<p>Plug-ins can contribute additional types of launchers and provide an <a href="../reference/api/org/eclipse/debug/core/ILaunchConfigurationDelegate.html"><b>ILaunchConfigurationDelegate</b></a>
 that knows how to launch a program given the expected type of launch configuration.&nbsp; Once the program
-is launched, an <a href="../reference/api/org/eclipse/debug/core/ILaunch.html">ILaunch
+is launched, an <a href="../reference/api/org/eclipse/debug/core/ILaunch.html"><b>ILaunch
+</b>
 </a>object is used to represent the launched session.&nbsp; This object can be
 queried for information such as running processes, debug session information,
 and source code location.&nbsp; A launch knows the configuration that was used to create
