--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
@@ -11,7 +11,7 @@
 <BODY BGCOLOR="#ffffff">
 <h3>Launch configuration type images</h3>
 <p>The image that is shown for a launch configuration type in the launch dialog
-is contributed using the <a href="../reference/extension-points/org_eclipse_debug_ui_launchConfigurationTypeImages.html">org.eclipse.debug.ui.launchConfigurationTypeImages</a>
+is contributed using the <a href="../reference/extension-points/org_eclipse_debug_ui_launchConfigurationTypeImages.html"><b>org.eclipse.debug.ui.launchConfigurationTypeImages</b></a>
 extension point.&nbsp; This extension associates an image file with the id of a
 configuration type.</p>
 <p><img border="0" src="images/launchImage.jpg" width="135" height="36"></p>
