--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uishortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uishortcuts.htm
@@ -11,11 +11,11 @@
 <BODY BGCOLOR="#ffffff">
 <h3>Launch shortcuts</h3>
 <p>Once a launch configuration has been defined using the dialog, it can be
-shown in the run and/or debug menus.&nbsp; The <a href="../reference/extension-points/org_eclipse_debug_ui_launchShortcuts.html">org.eclipse.debug.ui.launchShortcuts</a>
+shown in the run and/or debug menus.&nbsp; The <a href="../reference/extension-points/org_eclipse_debug_ui_launchShortcuts.html"><b>org.eclipse.debug.ui.launchShortcuts</b></a>
 extension point is used to register launch shortcuts.&nbsp; In the extension
 definition, you can specify in which modes (run, debug) and in which
 perspectives the shortcuts are shown.&nbsp; For each shortcut, you must specify
-an implementation of <a href="../reference/api/org/eclipse/debug/ui/ILaunchShortcut">ILaunchShortcut</a>.&nbsp;
+an implementation of <a href="../reference/api/org/eclipse/debug/ui/ILaunchShortcut"><b>ILaunchShortcut</b></a>.&nbsp;
 This class is used to launch a program given a particular selection in a view or
 editor.</p>
 <p>The following markup registers shortcuts for launching a Java application:</p>
