--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_expressions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_expressions.htm
@@ -13,9 +13,9 @@
 <p>An <b>expression</b> is a snippet of code that can be evaluated to produce a
 value.&nbsp; The context for an expression depends on the particular debug
 model.&nbsp; Some expressions may need to be evaluated at a specific location in
-the program so that the variables can be referenced.&nbsp; <a href="../reference/api/org/eclipse/debug/core/IExpression.html">IExpression</a>
+the program so that the variables can be referenced.&nbsp; <a href="../reference/api/org/eclipse/debug/core/IExpression.html"><b>IExpression</b></a>
 defines a general interface for debug expressions.</p>
-<p>An expression manager (<a href="../reference/api/org/eclipse/debug/core/IExpressionManager.html">IExpressionManager</a>)
+<p>An expression manager (<a href="../reference/api/org/eclipse/debug/core/IExpressionManager.html"><b>IExpressionManager</b></a>)
 keeps track of all of the expressions in the workspace.&nbsp; It will also fire
 events to interested listeners as expressions are added, removed, or changed.</p>
 <p>Expressions can be used to implement &quot;watch lists,&quot;
