--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
@@ -10,10 +10,10 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Adding launchers to the platform</h3>
-<p>Your plug-in can add launch configuration types to the platform using the <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html">org.eclipse.debug.core.launchConfigurationTypes</a>
+<p>Your plug-in can add launch configuration types to the platform using the <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>
 extension point.&nbsp; This extension point allows you to declare a
 configuration type using a unique id.&nbsp; You must provide a corresponding
-implementation of <a href="../reference/api/org/eclipse/debug/core/ILaunchConfigurationDelegate.html">ILaunchConfigurationDelegate</a>
+implementation of <a href="../reference/api/org/eclipse/debug/core/ILaunchConfigurationDelegate.html"><b>ILaunchConfigurationDelegate</b></a>
 in your plug-in.&nbsp; You can also specify which modes (run, debug) are
 supported by your launcher and a name that should be used when showing launchers
 of this type to the user.</p>
@@ -25,34 +25,24 @@ configuration for launching local Java programs:</p>
 	   name=&quot;%localJavaApplication&quot;
 	   delegate=&quot;org.eclipse.jdt.internal.launching.JavaLocalApplicationLaunchConfigurationDelegate&quot;
 	   modes= &quot;run, debug&quot;&gt;
-	   &lt;fileExtension
-	   		extension=&quot;java&quot;
-	   		default=&quot;true&quot;/&gt;
-	   &lt;fileExtension
-	   		extension=&quot;class&quot;
-	   		default=&quot;true&quot;/&gt;
    &lt;/launchConfigurationType&gt;
 &lt;/extension&gt;</font></pre>
-<p>As shown above, you can also specify file extensions with which the launch
-configuration can be used.&nbsp; In this example, the launch configuration is
-set as the default launcher for files with the &quot;java&quot; or
-&quot;class&quot; extension.</p>
 <h4>Defining source locators</h4>
 <p>For each type of launch configuration that supports debug mode, it is
 important to define a way to find the source code that corresponds with the
-current execution point in the code.&nbsp; <a href="../reference/api/org/eclipse/debug/core/model/ISourceLocator.html">ISourceLocator</a>
-and <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.htmll">IPersistableSourceLocator</a>
+current execution point in the code.&nbsp; <a href="../reference/api/org/eclipse/debug/core/model/ISourceLocator.html"><b>ISourceLocator</b></a>
+and <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.htmll"><b>IPersistableSourceLocator</b></a>
 define an interface for mapping from an executing program back to the source
 code. </p>
 <p>Source locators are typically implemented to work with a corresponding launch
 configuration and launch configuration delegate.&nbsp; Since launch
-configurations can be persisted, source locators must also be able to be stored
-with the launch configuration.&nbsp; Source locators are stored by setting an
+configurations can be persisted, source locators may also be stored
+with the launch configuration.&nbsp; This is accomplished by setting an
 attribute of the launch configuration to an id of a source locator.&nbsp; When a
 launch configuration is read from disk, the id of the source locator must be
-mapped back to the implementation class.&nbsp; This is achieved using the <a href="../reference/extension-points/org_eclipse_debug_core_source_locators.html">org.eclipse.debug.core.sourceLocators</a>
+mapped back to the implementation class.&nbsp; This is achieved using the <a href="../reference/extension-points/org_eclipse_debug_core_source_locators.html"><b>org.eclipse.debug.core.sourceLocators</b></a>
 extension point.&nbsp;</p>
-<p>The extension point allows you to register your class that implements <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.htmll">IPersistableSourceLocator</a>
+<p>The extension point allows you to register your class that implements <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.htmll"><b>IPersistableSourceLocator</b></a>
 and associate it with an id that will be stored with the launch
 configuration.&nbsp; This allows the debug plug-in to look up source locator
 classes by id when it's time to instantiate a launch configuration.</p>
@@ -74,7 +64,7 @@ method will
 be used if no comparator has been provided.&nbsp; However, some attribute values
 may require special handling, such as stripping white space values from text
 before comparing for equality. </p>
-<p>Comparators are contributed using the <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_comparators.html">org.eclipse.debug.core.launchConfigurationComparators</a>
+<p>Comparators are contributed using the <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_comparators.html"><b>org.eclipse.debug.core.launchConfigurationComparators</b></a>
 extension point.&nbsp; </p>
 <p>The Java tools supply launch configuration comparators for comparing program
 source paths and class paths.</p>
