--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_status.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_status.htm
@@ -17,7 +17,7 @@ user when certain types of errors occur during a launch, or provide information
 messages for certain status changes in the program.&nbsp; Since it's good
 practice to separate UI handling from core function, you do not want to have
 direct references from your launch delegate to status handling classes.</p>
-<p>This problem is addressed by the <a href="../reference/extension-points/org_eclipse_debug_core_status_handlers.html">org.eclipse.debug.core.statusHandlers</a>
+<p>This problem is addressed by the <a href="../reference/extension-points/org_eclipse_debug_core_status_handlers.html"><b>org.eclipse.debug.core.statusHandlers</b></a>
 extension point.&nbsp; It allows you to associate a status handler with a
 specific status code.&nbsp; Using this extension point, you can define all of
 the possible status and error codes in your launch delegate and core classes,
@@ -28,9 +28,9 @@ handler and a launch configuration.&nbsp; It is up to the implementation of the
 launch delegate to detect errors, find the appropriate status handler, and
 invoke it.&nbsp; The extension merely provides a registry so that the status
 handlers can be found for particular status codes.&nbsp; Clients find status
-handlers by querying the <a href="../reference/api/org/eclipse/debug/core/DebugPlugin.html">DebugPlugin</a>.</p>
+handlers by querying the <a href="../reference/api/org/eclipse/debug/core/DebugPlugin.html"><b>DebugPlugin</b></a>.</p>
 <pre><font color="#4444CC"><font SIZE="2">IStatusHandler</font><font SIZE="2"> handler = DebugPlugin.getDefault().getStatusHandler(status);</font></font></pre>
-<p>Status handlers should implement <a href="../reference/api/org/eclipse/debug/core/IStatus">IStatusHandler</a>.&nbsp;
+<p>Status handlers should implement <a href="../reference/api/org/eclipse/debug/core/IStatus"><b>IStatusHandler</b></a>.&nbsp;
 The status handling class is specified in the extension definition, along with
 its associated status code and the plug-in that is expected to generate the
 status codes.</p>
