--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Launch configuration dialogs</TITLE>
+<TITLE>Launch configuration dialog</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Launch configuration dialogs</h3>
+<h3>Launch configuration dialog</h3>
 <p>Launch configurations can most easily be visualized by looking at their
 corresponding UI.&nbsp; Users interact with a launch configuration dialog to
 create instances of the different types of launch configurations that have been
@@ -17,11 +17,11 @@ contributed by plug-ins.&nbsp; Each type of launch configuration defines a group
 of tabs that collect and display information about the configuration.&nbsp; The
 tab group for local java applications is shown below.</p>
 <p><img border="0" src="images/launchdialog.jpg" width="628" height="560"></p>
-<p>The tabs are contributed using the <a href="../reference/extension-points/org_eclipse_debug_ui_launchConfigurationTabGroups.html">org.eclipse.debug.ui.launchConfigurationTabGroups</a>
+<p>The tabs are contributed using the <a href="../reference/extension-points/org_eclipse_debug_ui_launchConfigurationTabGroups.html"><b>org.eclipse.debug.ui.launchConfigurationTabGroups</b></a>
 extension point.&nbsp;&nbsp;&nbsp; The markup for this extension is
 straightforward. You associate the id of a configuration type (contributed using
-<a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html">org.eclipse.debug.core.launchConfigurationTypes</a>)
-with a class that implements <a href="http://../reference/api/org/eclipse/debug/ui/ILaunchConfigurationTabGroup.html">ILaunchConfigurationTabGroup</a>.&nbsp;
+<a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>)
+with a class that implements <a href="http://../reference/api/org/eclipse/debug/ui/ILaunchConfigurationTabGroup.html"><b>ILaunchConfigurationTabGroup</b></a>.&nbsp;
 The Java application tab group is contributed like this:</p>
 <pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.launchConfigurationTabGroups&quot;&gt;
 	&lt;launchConfigurationTabGroup
@@ -32,7 +32,7 @@ The Java application tab group is contributed like this:</p>
 &lt;/extension&gt;</font></pre>
 <p>Your tab group class is responsible for creating the necessary tabs and
 displaying and saving the relevant data from the launch configuration
-attributes.&nbsp; A tab that is common to all configurations, <a href="../reference/api/org/eclipse/ui/CommonTab.html">CommonTab</a>,
+attributes.&nbsp; A tab that is common to all configurations, <a href="../reference/api/org/eclipse/ui/CommonTab.html"><b>CommonTab</b></a>,
 is already implemented and can be created by any configuration.&nbsp; This tab
 manages the saving of the launch configuration as well as collecting common
 preferences.</p>
