--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_presentation.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_presentation.htm
@@ -13,13 +13,13 @@
 <p>Since there is a generic, uniform model for debug elements in the platform,
 it's possible to provide a starting point for implementing debugger UI
 classes.&nbsp; The heart of the debugger UI support is the <b>debug model
-presentation</b> (<a href="../reference/api/org/eclipse/debug/ui/IDebugModelPresentation.html">IDebugModelPresentation</a>).&nbsp;
+presentation</b> (<a href="../reference/api/org/eclipse/debug/ui/IDebugModelPresentation.html"><b>IDebugModelPresentation</b></a>).&nbsp;
 The debug model presentation is responsible for providing labels, images, and
 editors associated with specific debug elements.</p>
 <p>Plug-ins that define their own debug model typically provide a debug model
 presentation for displaying debug elements in the model.&nbsp;&nbsp; This is
-done using the <a href="../reference/extension-points/org_eclipse_debug_ui_debugModelPresentations.html">org.eclipse.debug.ui.debugModelPresentations</a>
-extension point.&nbsp; This extension point allows an implementation of <a href="../reference/api/org/eclipse/debug/ui/IDebugModelPresentation.html">IDebugModelPresentation</a>
+done using the <a href="../reference/extension-points/org_eclipse_debug_ui_debugModelPresentations.html"><b>org.eclipse.debug.ui.debugModelPresentations</b></a>
+extension point.&nbsp; This extension point allows an implementation of <a href="../reference/api/org/eclipse/debug/ui/IDebugModelPresentation.html"><b>IDebugModelPresentation</b></a>
 to be associated with the identifier of a particular debug model.&nbsp; </p>
 <p>Recall that <a href="debug_model.htm">debug model elements</a> know the id of
 their originating debug model.&nbsp; This means that given any debug element,
@@ -34,7 +34,7 @@ plug-in registry for any corresponding debug model presentations.</p>
           &lt;/debugModelPresentation&gt; 
 &lt;/extension&gt;</font></pre>
 <p>An optional <b>detailsViewerConfiguration</b> can be specified in addition to
-the debug model presentation.&nbsp; The details viewer must extend the JFace <a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a>
+the debug model presentation.&nbsp; The details viewer must extend the JFace <a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html"><b>SourceViewerConfiguration</b></a>
 class. The meaning of &quot;details&quot; is interpreted by the debug
 model.&nbsp; The details are computed by the debug model presentation and passed
 to the details viewer.&nbsp; For example, the Java debugger uses the details
