--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_ui.htm
@@ -12,7 +12,7 @@
 <h3>Debug UI utility classes</h3>
 <p>The debug UI plug-in provides some classes that provide good building blocks
 for building debugger user interfaces.</p>
-<p><a href="../reference/api/org/eclipse/debug/ui/DebugUITools.html">DebugUITools</a>
+<p><a href="../reference/api/org/eclipse/debug/ui/DebugUITools.html"><b>DebugUITools</b></a>
 implements function commonly used by debug user interfaces:</p>
 <ul>
   <li>storage and retrieval of images on behalf of debug UI clients</li>
@@ -22,11 +22,11 @@ implements function commonly used by debug user interfaces:</p>
   <li>information about the current program under debug</li>
   <li>opening the launch configuration dialog</li>
 </ul>
-<p><a href="../reference/api/org/eclipse/debug/ui/IDebugView.html">IDebugView</a>
+<p><a href="../reference/api/org/eclipse/debug/ui/IDebugView.html"><b>IDebugView</b></a>
 provides common function for debug views.&nbsp; It provides access to an
 underlying viewer and its debug model presentation.&nbsp; Typically, clients
-should extend <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html">AbstractDebugView</a>
-rather than implement the interface from scratch.&nbsp; <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html">AbstractDebugView</a>
+should extend <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html"><b>AbstractDebugView</b></a>
+rather than implement the interface from scratch.&nbsp; <a href="../reference/api/org/eclipse/debug/ui/AbstractDebugView.html"><b>AbstractDebugView</b></a>
 provides additional common function:</p>
 <ul>
   <li>storage of actions in an action registry</li>
