*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
@@ -136,7 +136,7 @@ The Java development tooling (JDT) plug-ins extend the platform workbench by
 providing specialized features for editing, viewing, compiling, debugging, and
 running Java code.</P>
 <P >The JDT is installed as a set of plug-ins that are included in the SDK.&nbsp;
-The JDT User Guide describes how to use the Java tools.&nbsp; The JDT Plug-in
+The Java Development User Guide describes how to use the Java tools.&nbsp; The JDT Plug-in
 Developer Guide describes the structure and API of the JDT.</P>
 
 
