--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
@@ -84,7 +84,7 @@ with the other two choices.</P>
     are, CVS inserts special markup in the file to indicate those lines which 
     could not be merged.</p>
   <p>Updating from within the Synchronization view works a bit differently. In 
-    the case of a conflict, updating will prompt you to either emerge in the changes 
+    the case of a conflict, updating will prompt you to either merge in the changes 
     or replace the entire file contents with those of the remote.</p>
 </DIV>
 <P>&nbsp;<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
