--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_markers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_markers.htm
@@ -41,8 +41,7 @@ Manipulating a marker is similar to manipulating a resource.&nbsp; Markers are <
 objects.&nbsp; You can obtain a marker handle from a resource, but you don't
 know if it actually exists until you use <b>exists()</b>
 protocol or otherwise try to manipulate it.&nbsp; Once you've established that a
-marker exists, you can find out the resource to which it belongs, query its <b>id</b>,
-or query named attributes that may have been assigned to it.</P>
+marker exists, you can query named attributes that may have been assigned to it.</P>
 
 <P >
 Markers are owned and managed by the platform, which takes care of making
@@ -97,7 +96,7 @@ subtypes in a moment when we define new marker types.)&nbsp; The <b> depth</b> a
 
 
 <P >
-You can also delete markers using <b>deleteMarkers(IMarker
+You can also delete markers using <b>IWorkspace.deleteMarkers(IMarker
 [])</b>. </P>
 
 
@@ -118,8 +117,7 @@ the standard attribute names (and some of the expected values) for the platform 
          marker.setAttribute(IMarker.MESSAGE, &quot;A sample marker message&quot;);
          marker.setAttribute(IMarker.PRIORITY, IMarker.PRIORITY_HIGH);
       } catch (CoreException e) {
-         // You need to handle the case where the resource doesn't exist
-      }
+         // You need to handle the case where the marker no longer exists      }
    }</pre></font>
 
 
