*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_custom.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_custom.htm
@@ -5,7 +5,7 @@
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
-Custom layouts
+Custom Layouts
 </TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
@@ -14,7 +14,7 @@ Custom layouts
 
 
 <H3>
-Custom layouts</H3>
+Custom Layouts</H3>
 <P >
 Occasionally, you may need to write your own custom <a href="../reference/api/org/eclipse/swt/widgets/Layout.html"><b> Layout</b></a> class. This is most appropriate when you have a complex layout that is used
 in many different places in your application. It may be appropriate when you can optimize layout using application specific knowledge. Before building a custom layout, consider the following:</P>
