--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_grid.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_grid.htm
@@ -17,7 +17,7 @@ GridLayout
 GridLayout</H3>
 <P >
 <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
-GridLayout</b></a> is the most powerful (and most complex) layout. <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
+GridLayout</b></a> is the one of the more powerful (and more complex) layout. <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
 GridLayout</b></a> lays out widgets in a grid, providing many configurable parameters that control the behavior of the grid rows and columns when the composite is resized.</P>
 <P >
 The <a href="../reference/api/org/eclipse/swt/layout/GridLayout.html"><b>
