--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
@@ -15,7 +15,8 @@ Events
 Events</H3>
 
 <P >
-We've seen how to create a display and some widgets and run our application's message loop. Where does the real work happen? It happens every time an event is read from the queue and dispatched to
+Once we create a display and some widgets, and start up the application's message
+loop, where does the real work happen? It happens every time an event is read from the queue and dispatched to
 a widget. Most of the application logic is implemented as responses to user events.</P>
 <P >
 The basic pattern is that you add a listener to some widget that you have created. When the appropriate event occurs,
